@@ -5,6 +5,7 @@
   {
     "boxstack",
     "buggy",
+    "cards",
     "chain1",
     "chain2",
     "collision",
